<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".SystemChoiceActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40sp"
        android:text="@string/consigne_choix_systeme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            android:id="@+id/systeme1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/btn_logut_bg"
            android:text="@string/titre_systeme1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_info"
            android:src="@android:drawable/ic_dialog_info" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/systeme2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/btn_logut_bg"
            android:text="@string/titre_systeme2"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_info"
            android:src="@android:drawable/ic_dialog_info" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/systeme3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/btn_logut_bg"
            android:text="@string/titre_systeme3"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_info"
            android:src="@android:drawable/ic_dialog_info" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/systeme4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/btn_logut_bg"
            android:text="@string/titre_systeme4"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/info4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btn_info"
            android:src="@android:drawable/ic_dialog_info" />


    </LinearLayout>

</LinearLayout>